<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin_x3"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/feedback"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spFeedBackCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/normal_margin_x2"
                android:layout_marginRight="@dimen/normal_margin_x2"
                android:layout_marginTop="@dimen/normal_margin_x2"
                android:layout_marginBottom="12dp"
                android:spinnerMode="dialog"
                android:textSize="18sp"
                android:entries="@array/feedbacks"
                android:drawSelectorOnTop="true"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin_x2"
                android:layout_marginRight="@dimen/normal_margin_x2"
                android:layout_marginTop="@dimen/normal_margin_x2"
                android:gravity="center">

                <EditText
                    android:id="@+id/txtMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="@string/feedback_write_comment"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:maxLength="450"
                    android:minHeight="100dp"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnSendFeedBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_save"
                android:layout_gravity="center"
                android:gravity="center"
                style="@style/buttonStyle"
                android:textSize="18sp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>